force-app/main/default/objects/Named_User__c/Named_User__c.object-meta.xml
<CustomObject>
    <label>Named User</label>
    <nameField>
        <label>Named User</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Named User</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>