force-app/main/default/objects/Named_User__c/fields/Channel_Digital__c.field-meta.xml
<CustomField>
    <fullName>Channel_Digital__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>PIC khusus untuk Channel (&apos;Social Media&apos;, &apos;Print Media&apos;, &apos;Website&apos;, &apos;Regulator&apos;, &apos;Solicitor/Lawyer&apos;).</inlineHelpText>
    <label>Channel Digital</label>
    <type>Checkbox</type>
</CustomField>