force-app/main/default/objects/Named_User__c/fields/Count_Case__c.field-meta.xml
<CustomField>
    <fullName>Count_Case__c</fullName>
    <inlineHelpText>Will Reset Monthly</inlineHelpText>
    <label>Count Case</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>