force-app/main/default/objects/Named_User__c/fields/Count_Skip__c.field-meta.xml
<CustomField>
    <fullName>Count_Skip__c</fullName>
    <label>Count Skip</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>