force-app/main/default/objects/Named_User__c/fields/Department__c.field-meta.xml
<CustomField>
    <fullName>Department__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Department</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Department__c.Entity__c</field>
            <operation>equals</operation>
            <valueField>$Source.Entity__c</valueField>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Department__c</referenceTo>
    <relationshipLabel>Named User</relationshipLabel>
    <relationshipName>Named_User</relationshipName>
    <type>Lookup</type>
</CustomField>