force-app/main/default/objects/Named_User__c/fields/Division__c.field-meta.xml
<CustomField>
    <fullName>Division__c</fullName>
    <label>Division</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CMU</fullName>
            </value>
            <value>
                <fullName>DMU</fullName>
            </value>
            <value>
                <fullName>CCC</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>