force-app/main/default/objects/Named_User__c/fields/Latest_Agent_Dist__c.field-meta.xml
<CustomField>
    <fullName>Latest_Agent_Dist__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Latest Agent Dist</label>
    <type>Checkbox</type>
</CustomField>