force-app/main/default/objects/Named_User__c/fields/Manual_Count_Skip__c.field-meta.xml
<CustomField>
    <fullName>Manual_Count_Skip__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Manual_Count_Skip</label>
    <type>Checkbox</type>
</CustomField>