force-app/main/default/objects/Named_User__c/fields/Policy_Apps__c.field-meta.xml
<CustomField>
    <fullName>Policy_Apps__c</fullName>
    <label>Policy Apps</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>RLS</fullName>
            </value>
            <value>
                <fullName>DMTM</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>