force-app/main/default/objects/Named_User__c/fields/SearchAll__c.field-meta.xml
<CustomField>
    <fullName>SearchAll__c</fullName>
    <defaultValue>&quot;all&quot;</defaultValue>
    <label>SearchAll</label>
    <length>255</length>
    <type>Text</type>
</CustomField>