force-app/main/default/objects/Named_User__c/fields/Trigger_Update_Active__c.field-meta.xml
<CustomField>
    <fullName>Trigger_Update_Active__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Trigger Update Active</label>
    <referenceTo>Named_User__c</referenceTo>
    <relationshipLabel>Named User</relationshipLabel>
    <relationshipName>Named_User</relationshipName>
    <type>Lookup</type>
</CustomField>