force-app/main/default/objects/Named_User__c/fields/User__c.field-meta.xml
<CustomField>
    <fullName>User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>User</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Named User</relationshipLabel>
    <relationshipName>Named_User</relationshipName>
    <type>Lookup</type>
</CustomField>