force-app/main/default/objects/Named_User__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>User__c</columns>
    <columns>Department__c</columns>
    <columns>Entity__c</columns>
    <filterScope>Everything</filterScope>
    <label>0. All</label>
    <language>en_US</language>
</ListView>