force-app/main/default/objects/Named_User__c/listViews/All_AGI.listView-meta.xml
<ListView>
    <fullName>All_AGI</fullName>
    <columns>NAME</columns>
    <columns>User__c</columns>
    <columns>Department__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Entity__c</field>
        <operation>equals</operation>
        <value>AGI</value>
    </filters>
    <label>All - AGI</label>
    <language>en_US</language>
</ListView>